--- a/DannyApp/app/build.gradle
+++ b/DannyApp/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.0'
     def retrofitVersion = "2.5.0"
     def rxJavaVersion = '2.1.1'
     implementation 'com.google.firebase:firebase-analytics'
