--- a/DannyApp/app/src/main/AndroidManifest.xml
+++ b/DannyApp/app/src/main/AndroidManifest.xml
@@ -2,20 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dannyapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DannyApp">
-        <activity android:name=".PokemonListActivity">
+
+        <activity
+            android:name="com.example.dannyappPokemonApp.Pokemonlistacitvity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.DannyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
