--- a/DannyApp/app/build.gradle
+++ b/DannyApp/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    //Design Support
+    implementation 'com.android.support:support-annotations:28.0.0'
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
