--- a/DannyApp/app/src/main/AndroidManifest.xml
+++ b/DannyApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name="com.example.dannyappPokemonApp.Pokemonlistacitvity"
+            android:name="com.example.dannyappPokemonApp.LoginActivity"
+
             android:theme="@style/Theme.DannyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.dannyappPokemonApp.PokemonCardsActivtity" />
-
+        <activity android:name="com.example.dannyappPokemonApp.Pokemonlistacitvity" />
     </application>
 
 </manifest>
