Implementing saving user
implemented saving uuser + some extra features

--- a/DannyApp/app/src/main/AndroidManifest.xml
+++ b/DannyApp/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.dannyappPokemonApp.PokemonCardsActivtity" />
+        <activity android:name="com.example.dannyappPokemonApp.RegisterActivity" />
+
         <activity android:name="com.example.dannyappPokemonApp.Pokemonlistacitvity" />
     </application>
 
